--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://duc-minh-droid.github.io/calculator/",
+  "homepage": "https://duc-minh-droid.github.io/calculator",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
